# datadog-logs

./: .gitignore  Cargo.toml  README.md  generate_assets.sh  package-lock.json  package.json
assets/: basicseq.mmdc  futurepoll.mmdc  loggerfuture.mmdc
src/: config.rs  ddlogger.rs  error.rs  lib.rs  log_integration.rs  self_log.rs  statics.rs
src/client/: http.rs  mod.rs  tcp.rs
src/logger/: FUTURE.md  blocking.rs  config.rs  error.rs  future.rs  level.rs  log.rs  logger.rs  mod.rs  nonblocking.rs
tests/: async_logger_tests.rs  blocking_logger_tests.rs  real_logger_tests.rs  tests_with_stub_client.rs
tests/utils/: mod.rs
