[package]
name = "datadog-logs"
version = "0.1.0"
authors = ["Radosław Kot <rdkt13@gmail.com>"]
license = "MIT"
description = "Simple client library for DataDog logs"
repository = "https://github.com/szarykott/datadog-logs"
edition = "2018"
readme = "README.md"
keywords = ["logging", "datadog"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# default set of dependencies
default = ["log-integration"]
# enables all features except for self-log
full = ["log-integration"]
# provides integration with log crate
log-integration = ["log"]

[dependencies]
serde_json = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] } 
url = { version = "2.1" }
attohttpc = { version = "0.15", features = ["tls", "compress"] }
log = { version = "0.4", features = ["std"], optional = true }
rustls = { version = "0.18", features = ["logging"] }
webpki = { version = "0.21" }
webpki-roots = { version = "0.20" }